
syntax = "proto3";
package auth;

service AuthenticationService {
rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
rpc Login (LoginRequest) returns (LoginResponse);
}
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 userId = 1;
  string role = 2;
  bool isValid = 3;
}


// Add to your auth.proto


message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 userId = 1;
  string email = 2;
  string role = 3;
  string accessToken = 4;
  string message = 5;
}
